2.log
catalog/catalog.cpp:3:7: error: ‘minisql’ has not been declared
 using minisql::minisql_path;
       ^
catalog/catalog.cpp: In function ‘void init_cata()’:
catalog/catalog.cpp:17:23: error: ‘minisql_path’ was not declared in this scope
  catalog::cata_path = minisql_path + "catalog\\";
                       ^
catalog/catalog.cpp: In function ‘void make_cata(std::shared_ptr<CreateTableSimpleAST>)’:
catalog/catalog.cpp:145:27: error: variable ‘std::ofstream w’ has initializer but incomplete type
  std::ofstream w(cata_file);
                           ^
catalog/catalog.cpp:158:17: error: variable ‘std::ofstream fsmap’ has initializer but incomplete type
  ofstream fsmap(maplog, ofstream::app );
                 ^
catalog/catalog.cpp:158:25: error: incomplete type ‘std::ofstream {aka std::basic_ofstream<char>}’ used in nested name specifier
  ofstream fsmap(maplog, ofstream::app );
                         ^
catalog/catalog.cpp:163:23: error: variable ‘std::ofstream fsnum’ has initializer but incomplete type
  ofstream fsnum(numlog);
                       ^
catalog/catalog.cpp:167:16: error: ‘minisql’ has not been declared
  string dbfile=minisql::record_path+ std::to_string(un) + ".db";
                ^
catalog/catalog.cpp: In function ‘void loadcata()’:
catalog/catalog.cpp:180:19: error: variable ‘std::ofstream ofs’ has initializer but incomplete type
   ofstream ofs(num);
                   ^
catalog/catalog.cpp:185:18: error: variable ‘std::ifstream ifs’ has initializer but incomplete type
  ifstream ifs(num);
                  ^
catalog/catalog.cpp:196:24: error: variable ‘std::ifstream mAP’ has initializer but incomplete type
   std::ifstream mAP(mAp);
                        ^
catalog/catalog.cpp:210:21: error: variable ‘std::ifstream ifs’ has initializer but incomplete type
   ifstream ifs(tblog);
                     ^
catalog/catalog.cpp: In function ‘void cata_wb()’:
catalog/catalog.cpp:232:17: error: variable ‘std::ofstream wn’ has initializer but incomplete type
  ofstream wn(num);
                 ^
catalog/catalog.cpp:237:18: error: variable ‘std::ofstream ofs’ has initializer but incomplete type
  ofstream ofs(mAp);
                  ^
make: *** [cata] Error 1
